<?xml version="1.0" encoding="utf-8"?>
<resources>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="app_name">Safe Circle</string>
    <string name="description">Family Locator and Tracker</string>
    <string name="channel">SAFE_CIRCLE_CHANNEL</string>
    <string name="permission_denied_explanation">Location Permission is required for the core functionality</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="title_activity_maps">Map</string>
    <string name="unknown_location">Unknown location</string>
    <string name="authDesc">Share this authentication code to your family member to add in his app to track your live location</string>
    <string name="download_profile_pic">https://</string>
    <string name="welcome_text">Safe Circle</string>
    <string name="authcode_hint">6 Character Authentication Code</string>
    <string name="authcode_button_hint">Add Member to track location</string>
    <string name="authcode_button_text">Add</string>
    <string name="email_hint">Email Address</string>
    <string name="content_descr">Application Logo</string>
    <string name="recenter">Recenter</string>
    <string name="pass_hint">Password</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="test_ads">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ads">ca-app-pub-3940256099942544/6300978111</string>
    <string name="date_format">ddMMyyyyHHmmss</string>
    <string name="channel_id">SAFE_CIRCLE</string>
    <string name="inappmsg">In-App Product Configuration Error. Please change the code to accommodate</string>
    <!--<string name="notification_message">Family Locator - Current Activity: %s</string>-->
    <string name="delete_msg">Delete %s?</string>
    <string name="notification_message">Safe Circle is Running</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="exittext">Exit</string>
    <string name="logintext">Login</string>
    <string name="test">Test</string>
    <string name="panic">Emergency</string>
    <!--<string name="facebook_app_id">397053011014714</string>-->
    <!--<string name="fb_login_protocol_scheme">fb397053011014714</string>-->
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb397053011014714</string>
    <string name="facebook_application_id" translatable="false">397053011014714</string>
    <!-- Twitter consumer key and secret -->
    <string name="geofence_transition_invalid_type">Geofencing Error %d</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="geofence_not_available">Geofencing not available</string>
    <string name="geofence_too_many_geofences">geofence_too_many_geofences</string>
    <string name="geofence_too_many_pending_intents">geofence_too_many_pending_intents</string>
    <string name="unknown_geofence_error">unknown_geofence_error</string>
    <string name="addplace">Add New Place</string>
    <string name="places">Current Places</string>
    <string name="submit">Purchase</string>
    <string name="renew_button_hint">Renew Subscription</string>
    <string name="renew_button_text">Purchase/Renew</string>
    <string name="upgrade_button_hint">Upgrade Subscription</string>
    <string name="upgrade_button_text">Upgrade</string>
    <string name="location_availibility">No Location Available for your device as of now. Please wait for the location update</string>
    <string name="buy_subs_msg">No Active subscription is detected. Please Purchase or Renew</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="members">Members</string>
    <string name="update">Update</string>
    <string name="add_member">Add Member</string>
    <string name="country">Country</string>
    <string name="profileEdit">Edit</string>
    <string-array name="myplaces">
        <item>Home</item>
        <item>Work</item>
    </string-array>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to</string>
    <string name="slide_1_desc">An extremely easy to find your Family, Relatives and Friends.\n\nAfter Login, just update your Profile Details and you are done. Phone is optional.\n\nApplication might not work expected if Profile is not updated.</string>

    <string name="slide_2_title">App Install</string>
    <string name="slide_2_desc">Install the App on all devices participating in tracking activity.</string>

    <string name="slide_3_title">Authorization Code</string>
    <string name="slide_3_desc">Exchange the Code with each other or either member can share the code to other to add from "Add Member" screen</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="image">Image</string>
    <string name="plane">Paper Plane</string>
    <string name="mapview">View All Your Family Members in Map View</string>
    <string name="add_member_detail_desc">Ask your family member to install the app and provide you the 6 Digit Authentication Code to enter here</string>
    <string name="enter_the_address">Enter the address</string>
    <string name="enter">Enter</string>
    <string name="location_button">Find My Location</string>
    <string name="address">Modify the Address if you want</string>
    <string name="hide_me_button">Hide Me</string>
    <string name="ratingText">Did you find the app useful?\n\nGo Ahead and Rate the application on Play Store</string>
    <string name="submitRating">Submit</string>
    <string name="app_not_found">Application not found on Play Store</string>
    <string name="places_desc">These places help if person has left or entered the place. So you keep your family updated if you are at home or at work place or travelling.</string>
    <string name="invalid_auth_code">Invalid Authentication Code</string>
    <string name="own_auth_add_error">I see you are adding your own authentication code. You are already there in Map!!!</string>
    <string name="max_member_error">Maximum Members Allowed: %d</string>
    <string name="action_settings">Settings</string>
    <string name="show_me_button">Show Me</string>
    <string name="my_location">My Location</string>
    <string name="modify_the_address_if_you_want">Modify the Address if you want</string>
    <string name="btn_find_family">Find Family</string>
    <string name="btn_login">Login</string>
    <string name="default_notification_channel_id">PUSH_NOTIFICATIONS</string>
    <string name="msg_token_fmt">%s</string>
    <string name="fcm_message">Safe Circle - %s</string>
    <string name="phoneNumberUsagePolicy">User\'s information security is our top most priority. Please be assured, your phone number will not be shared to anyone. However, you can choose not to enter.</string>
</resources>
