<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMemberActivity">

    <EditText
        android:id="@+id/authCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/authcode_hint"
        android:autofillHints="yes"
        android:inputType="text"
        ads:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:hint="@string/authcode_button_hint"
        android:text="@string/authcode_button_text"
        ads:layout_constraintTop_toBottomOf="@+id/authCode" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="360dp"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ads"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>