<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addPlaceActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:text="@string/my_location"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/mylocationbutton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_my_location_black_24dp"
            android:contentDescription="@string/my_location"
            android:text="@string/my_location" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="10dp"
        android:hint="@string/enter_the_address"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="5"
        android:scrollHorizontally="false"
        android:importantForAutofill="no"
        android:text="@string/enter"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/myplaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorGreyF5"
        android:dropDownSelector="@drawable/ic_my_location_black_24dp" />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_the_address_if_you_want"
        android:textAlignment="center"
        android:textColor="@color/requiredField"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>