<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@string/common_google_play_services_enable_text"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll"
    tools:context=".ProfileActivity">

    <!--<TextView-->
    <!--android:id="@+id/currUser"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textAlignment="center"-->
    <!--android:textFontWeight="24"-->
    <!--android:textSize="24sp"-->
    <!--android:textStyle="bold" />-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_user_silhouette"
        app:layout_constraintBottom_toTopOf="@+id/first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/common_google_play_services_enable_text"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/common_google_play_services_enable_text"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/first"
        android:inputType="text" />

    <TextView
        android:id="@+id/last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/common_google_play_services_enable_text"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/common_google_play_services_enable_text"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/last"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/cntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cntrycode"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@string/common_google_play_services_enable_text"
            android:text="@string/country" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:onClick="onCountryPickerClick"
            android:paddingStart="10dp"
            app:ccp_clickable="false"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/common_google_play_services_enable_text"
        app:layout_constraintTop_toBottomOf="@+id/cntry"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:fontFamily="@string/common_google_play_services_enable_text"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/labelPhone"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/common_google_play_services_enable_text"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:text="@string/members" />

    <ListView
        android:id="@+id/membersList"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_margin="5dp" />

    <LinearLayout
        android:id="@+id/btnsGrouup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/membersList"
        android:orientation="vertical">

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/update" />

        <Button
            android:id="@+id/addMember"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:layout_weight="1"
            android:text="@string/add_member" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>