<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".ShareCodeActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authCode"
        android:layout_width="314dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMinTextSize="24sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/authcode_hint"
        android:textAlignment="center"
        app:fontFamily="@font/advent_pro_bold"
        app:layout_constraintBottom_toTopOf="@+id/authDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authDesc"
        android:layout_width="325dp"
        android:layout_height="165dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="296dp"
        android:gravity="center"
        android:text="@string/authDesc"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="360dp"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ads"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>