<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/label"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:drawableBottom="@drawable/ic_map_marker_point"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            app:autoSizeTextType="uniform" />

        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@drawable/ic_map_marker_point"-->
        <!--android:contentDescription="@string/content_descr" />-->
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="197dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:text="@string/logintext"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/exit"
        android:layout_width="197dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style"
        android:text="@string/exittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>